--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".EmailRegisterActivity"></activity>
+        <activity android:name=".EmailRegisterActivity" />
+        <activity android:name=".TestActivity"></activity>
     </application>
 
 </manifest>
